--- a/strangler-microservice/src/main/web-component/package.json
+++ b/strangler-microservice/src/main/web-component/package.json
@@ -1,84 +1,19 @@
 {
   "name": "strangler-web-components",
   "version": "1.0.0",
-  "description": "Vue.js based web components provided by the microservice",
-  "author": "Georg Wittberger <georg.wittberger@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.5.13"
+    "vue": "^2.5.16"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.5",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^22.1.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "chalk": "^2.3.0",
-    "chromedriver": "^2.35.0",
-    "copy-webpack-plugin": "^4.3.1",
-    "cross-spawn": "^6.0.4",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.17.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.4",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-vue": "^4.2.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.1.4",
-    "jest-serializer-vue": "^0.3.0",
-    "jsonfile": "^4.0.0",
-    "nightwatch": "^0.9.19",
-    "node-notifier": "^5.2.1",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.4.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.1.0",
-    "postcss-url": "^7.3.0",
-    "rimraf": "^2.6.2",
-    "selenium-server": "^3.8.1",
-    "semver": "^5.5.0",
-    "shelljs": "^0.8.1",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "url-loader": "^0.6.2",
-    "vue-class-component": "^6.1.2",
-    "vue-jest": "^2.0.1",
-    "vue-loader": "^14.1.1",
-    "vue-style-loader": "^3.1.2",
-    "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.10.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
+    "@vue/cli-service": "^3.0.0-beta.15",
+    "vue-class-component": "^6.2.0",
+    "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
     "> 1%",
